--- a/views/home.jade
+++ b/views/home.jade
@@ -113,5 +113,5 @@ block content
       ==================================================
     // Placed at the end of the document so the pages load faster
     script(src='https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js')
-    script(src='/javascripts/bootstrap.min.js')
-    script(src='/javascripts/offcanvas.js')
+    script(src='/js/bootstrap.min.js')
+    script(src='/js/offcanvas.js')
