--- a/views/layout.jade
+++ b/views/layout.jade
@@ -2,6 +2,7 @@ doctype html
 html
   head
     title= title
+    // Bootstrap core CSS
     link(href='/stylesheets/bootstrap.min.css', rel='stylesheet')
 
   body
