--- a/views/landing.jade
+++ b/views/landing.jade
@@ -1,59 +1,56 @@
 extends layout
 
 block content
-  head
-    meta(charset='utf-8')
-    meta(http-equiv='X-UA-Compatible', content='IE=edge')
-    meta(name='viewport', content='width=device-width, initial-scale=1')
-    meta(name='description', content='')
-    meta(name='author', content='')
-    link(rel='icon', href='/images/favicon.ico')
-    link(href='/stylesheets/landing.css', rel='stylesheet')
-    title Katalist
-    
+	head
+		meta(charset='utf-8')
+		meta(http-equiv='X-UA-Compatible', content='IE=edge')
+		meta(name='viewport', content='width=device-width, initial-scale=1')
+		meta(name='description', content='')
+		meta(name='author', content='')
+		link(rel='icon', href='/images/favicon.ico')
+		link(href='/stylesheets/landing.css', rel='stylesheet')
+		title Katalist
+		
 
-  body
-    nav.navbar.navbar-default
-      .container-fluid
-        // Brand and toggle get grouped for better mobile display
-        .navbar-header
-          button.navbar-toggle.collapsed(type='button', data-toggle='collapse', data-target='#navbar-collapse-1')
-            span.sr-only Toggle navigation
-            span.icon-bar
-            span.icon-bar
-            span.icon-bar
-          a.navbar-brand(href='#') Katalist
-        // Collect the nav links, forms, and other content for toggling
-        #navbar-collapse-1.collapse.navbar-collapse
-          ul.nav.navbar-nav
-            li
-              a(href='#') About
-          ul.nav.navbar-nav.navbar-right
-            li
-              a(href='/signup') Register
-            li.dropdown
-              a(href='#', data-toggle='dropdown') Login
-              .dropdown-menu(style='padding:17px;')
-                form.form-signin(action='/login', method='POST')
-                  input#userInput.form-control(type='text', name='username', placeholder='Username', required='')
-                  input#inputPassword.form-control(type='password', name='password', placeholder='Password', required='')
-                  .checkbox
-                    label
-                      input(type='checkbox', value='remember-me')
-                      |  Remember me
-                  button.btn.btn-primary.btn-block(type='submit') Sign in
-        // /.navbar-collapse
-      // /.container-fluid
+	body
+		nav.navbar.navbar-default
+			.container
+				// Brand and toggle get grouped for better mobile display
+				.navbar-header
+					button.navbar-toggle.collapsed(type='button', data-toggle='collapse', data-target='#navbar-collapse-1')
+						span.sr-only Toggle navigation
+						span.icon-bar
+						span.icon-bar
+						span.icon-bar
+					a.navbar-brand(href='#') Katalist
+				// Collect the nav links, forms, and other content for toggling
+				#navbar-collapse-1.collapse.navbar-collapse
+					ul.nav.navbar-nav
+						li
+							a(href='#') About
+					ul.nav.navbar-nav.navbar-right
+						li
+							a(href='/signup') Register
+						li.dropdown
+							a(href='#', data-toggle='dropdown') Login
+							.dropdown-menu(style='padding:17px;')
+								form.form-signin(action='/login', method='POST')
+									input#userInput.form-control(type='text', name='username', placeholder='Username', required='')
+									input#inputPassword.form-control(type='password', name='password', placeholder='Password', required='')
+									.checkbox
+										label
+											input(type='checkbox', value='remember-me')
+											| Remember me
+									button.btn.btn-primary.btn-block(type='submit') Sign in
+				// /.navbar-collapse
+			// /.container-fluid
 
-     #posts.container
-      .col-md-4
-      #bookmark.well.well-lg
-        h2 Google
-        h4 http://google.com
-        button#upvote.btn.btn-default(type='button')
-          span.glyphicon.glyphicon-chevron-up
-            small#numVotes 666
+		#posts.container
+			.col-md-12#post_container
+			// #bookmark.well.well-lg h2 Google h4 http://google.com button#upvote.btn.btn-default(type='button') span.glyphicon.glyphicon-chevron-up small#numVotes 666
 
-    script(src='../js/jquery.js')
-    script(src='../js/bootstrap.min.js')
-    script(src='../js/offcanvas.js')
+		script(src='../js/jquery.js')
+		script(src='../js/bootstrap.min.js')
+		script(src='../js/offcanvas.js')
+		script(src='../js/firebase.js')
+		script(src='../js/katalist.js')
