Changed views, changed the way firebase populates the view

--- a/public/stylesheets/login.css
+++ b/public/stylesheets/login.css
@@ -1,9 +1,8 @@
 body {
   padding-top: 40px;
   padding-bottom: 40px;
-  background-color: #eee;
+  background-color: #fff;
 }
-
 .form-signin {
   max-width: 330px;
   padding: 15px;
@@ -35,4 +34,13 @@ body {
 }
 .form-signin input[type="password"] {
   margin-bottom: 10px;
+}
+.fancy {
+  font-family: Dosis-Light;
+}
+@font-face {
+  font-family: Dosis-Light;
+  src: url(/fonts/Dosis.ttf);
+  .lowerc {
+  }
 }
