--- a/views/signup.jade
+++ b/views/signup.jade
@@ -1,23 +1,22 @@
 extends layout
 
 block content
-	head
-		// Custom styles for this template
-		link(href='/stylesheets/signup.css', rel='stylesheet')
-	body
-		div.container
-			div.row
-				div.col-sm-6.col-md-4.col-md-offset-4
-					h1.text-center.login-title Registration Details
-						div.signup-wall
-							form(class='form-signin', action='/signup', method='POST')
-								input(type='text', name='username', class='form-control', placeholder='Username',required, autofocus)
-								input(type='password', name='password', class='form-control nomargin', placeholder='Password', required)
-								input(type='email', name='email', class='form-control', placeholder='Email',required)
-								input(type='text', name='firstName', class='form-control', placeholder='First Name',required)
-								input(type='text', name='lastName', class='form-control', placeholder='Last Name',required)
-								button(class='btn btn-lg btn-primary btn-block', type='submit') Register
-								span.clearfix
-						#message
-							if message
-								h1.text-center.error-message #{message}
+  head
+    // Custom styles for this template
+    link(href='/stylesheets/signup.css', rel='stylesheet')
+  body
+    .container
+      .row
+        .col-md-4.col-md-offset-4
+          h1.text-center.login-title
+            | Registration Details
+            .signup-wall
+              form.form-signin(action='/signup', method='POST')
+                input.form-control(type='text', name='username', placeholder='Username', required='required', autofocus='autofocus')
+                input.form-control.nomargin(type='password', name='password', placeholder='Password', required='required')
+                input.form-control(type='email', name='email', placeholder='Email', required='required')
+                input.form-control(type='text', name='firstName', placeholder='First Name', required='required')
+                input.form-control(type='text', name='lastName', placeholder='Last Name', required='required')
+                button.btn.btn-primary.btn-block(type='submit') Register
+                span.clearfix
+            #message
