--- a/public/stylesheets/landing.css
+++ b/public/stylesheets/landing.css
@@ -1,9 +1,15 @@
 .form-signin input {
   margin-bottom: 3px;
 }
-.navbar {
-  margin-bottom: 25px;
-}
 #upvote {
   color:#06FF6F;
+}
+
+#feed-container {
+  margin: 0 auto;
+  max-width: 700px;
+}
+
+body {
+  padding-top: 60px;
 }
