--- a/views/home.jade
+++ b/views/home.jade
@@ -2,13 +2,11 @@ extends layout
 
 block content
   head
-    meta(charset='utf-8')
     meta(http-equiv='X-UA-Compatible', content='IE=edge')
-    meta(name='viewport', content='width=device-width, initial-scale=1')
     meta(name='description', content='')
     meta(name='author', content='')
     link(rel='icon', href='/images/favicon.ico')
-    title bookShare | Home
+    title Katalist | Home
     // Bootstrap core CSS
     link(href='/stylesheets/bootstrap.min.css', rel='stylesheet')
     // Custom styles for this template
