--- a/views/layout.jade
+++ b/views/layout.jade
@@ -2,8 +2,13 @@ doctype html
 html
   head
     title= title
-    // Bootstrap core CSS
-    link(href='/stylesheets/bootstrap.min.css', rel='stylesheet')
+    <meta name='viewport' content='width=device-width, initial-scale=1.0'>
+    // Bootplus core CSS
+    link(href='/stylesheets/bootplus.min.css' rel='stylesheet')
+    meta(charset='utf-8')
+    meta(http-equiv='X-UA-Compatible', content='IE=edge')
+    meta(name='viewport', content='width=device-width, initial-scale=1')
+    
 
   body
     block content
