--- a/public/stylesheets/login.css
+++ b/public/stylesheets/login.css
@@ -12,8 +12,9 @@ body {
 .form-signin .checkbox {
   margin-bottom: 10px;
 }
-.form-signin .checkbox {
+.form-signin .checkbox, form-signin .checkbox .label {
   font-weight: normal;
+  text-align: left;
 }
 .form-signin .form-control {
   position: relative;
@@ -23,6 +24,7 @@ body {
           box-sizing: border-box;
   padding: 10px;
   font-size: 16px;
+  width: 100%;
 }
 .form-signin .form-control:focus {
   z-index: 2;
