--- a/public/stylesheets/signup.css
+++ b/public/stylesheets/signup.css
@@ -19,6 +19,7 @@ body {
           box-sizing: border-box;
   padding: 10px;
   font-size: 16px;
+  width: 100%;
 }
 .form-signin .form-control:focus {
   z-index: 2;
