Added upvote function. Does not update view :(

--- a/views/layout.jade
+++ b/views/layout.jade
@@ -5,6 +5,7 @@ html
     <meta name='viewport' content='width=device-width, initial-scale=1.0'>
     // Bootplus core CSS
     link(href='/stylesheets/bootplus.min.css' rel='stylesheet')
+    link(href='/stylesheets/font-awesome.min.css' rel='stylesheet')
     meta(charset='utf-8')
     meta(http-equiv='X-UA-Compatible', content='IE=edge')
     meta(name='viewport', content='width=device-width, initial-scale=1')
